--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br>
         <br>My name is Alvaro, and I used HTML, CSS, and JavaScript to create my online resume. 
         <br>
-        <br>This website was built for learning purposes and to make reviewing CVs more entertaining for recruiters.
+        <br>This website was built for learning purposes and to help recruiters reviewing my CV.
         <br>
         <br>I hope this makes things simpler! 
         <br>
